--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,10 @@ $color: steelblue;
 .movie-client {
     color: $color;
 }
+
+.movie-poster img {
+    color: $color;
+    background-color: $color;
+    height: 200px;
+    width: 150px;
+}
